web/themes/custom/usagov/sass/_footer.scss
@use "uswds-core" as *;
@use "usagov-variables" as *;

/* ---- All Footers ----
*/

.usa-footer--big .usa-footer__primary-content--collapsible .usa-footer__primary-link {
  font-family: "Source Sans Pro Web", "Helvetica Neue", Helvetica, Roboto, Arial,
    sans-serif;
  font-size: 1.2rem;
}

.usa-footer--big {
  padding-top: 2rem;
}

/* ---- Primary Footer ----
*/

.usa-sign-up__heading {
  font-family: "Source Sans Pro Web", "Helvetica Neue", Helvetica, Roboto, Arial,
    sans-serif;
}

.usa-footer__primary-content--collapsible.hidden {
  // USWDS footer adds class 'hidden' when collapsing a section into a dropdown, but Drupal hides the whole dropdown.
  display: block;
}

.usa-gov-footer__primary-link {
  text-size-adjust: 100%;
  font-feature-settings: "kern" 1;
  font-kerning: normal;
  box-sizing: inherit;
  color: var($off-black);
  text-decoration: none;
  padding: 0;
  font-weight: 700;
  line-height: 1.2;
  margin: 0;
  margin-bottom: 0;
  align-items: center;
  display: flex;
  justify-content: flex-start;
  font-family: "Source Sans Pro Web", "Helvetica Neue", Helvetica, Roboto, Arial,
    sans-serif;
  font-size: 1.2rem;
}

.usa-gov-footer__primary-link--button {
  overflow: visible;
  text-transform: none;
  appearance: button;
  padding: 1rem;
  width: 100%;
  border: 0;
  cursor: pointer;
}

.usa-gov-footer__primary-link--button::before {
  height: 1.25rem;
  width: 1.25rem;
  align-items: center;
  background-size: contain;
  content: "";
  display: inline-flex;
  justify-content: center;
  margin-right: 0.25rem;
  margin-left: -0.25rem;
  background-color: currentcolor;
  mask: url("../assets/img/usa-icons/expand_more.svg") no-repeat center/contain;
}

.usa-gov-footer__primary-link--button[aria-expanded="false"]::before {
  background-color: currentcolor;
  mask: url("../assets/img/usa-icons/navigate_next.svg") no-repeat center/contain;
  display: inline-block;
  height: 1.25rem;
  width: 1.25rem;
  content: "";
  vertical-align: middle;
  margin-right: 0.25rem;
}

.usa-gov-footer__primary-link--button:hover {
  text-decoration: underline;
}

.usa-gov-footer__primary-link--button:focus {
  text-decoration: underline;
  outline: 0.25rem solid var($deep-orange);
  outline-offset: -0.25rem;
}

.usa-footer__primary-section .usa-list {
  margin-top: 1rem;
}

.usa-gov-footer__primary-link--button:not([disabled]):focus {
  outline-offset: -0.25rem;
}

.footer-button {
  border: 1px solid #1b1b1b;
  line-height: 1.5;
}

#footer-email {
  border-color: var($off-black);
}

.ftr-list {
  @media (min-width: 64em) {
    padding-top: 1.4rem;
  }
}

/* ---- Secondary Footer ----
*/
.usa-footer__secondary-section {
  background-color: color("cyan-10");

  .grid-container {
    padding-bottom: 2rem;
  }

  .grid-row.grid-gap-1>* {
    padding-right: 0;
  }
}

.usa-footer__logo {
  @media (max-width: 30em) {
    padding-bottom: 20px;
  }
}

.usa-footer__secondary-link a.disabled,
.usa-footer__secondary-section a.disabled {
  pointer-events: none;
  color: var($black);
  text-decoration: none;
}

.footer-question {
  min-height: 15px;
  margin-block-end: 8px;
}

.usa-footer__contact-links {
  @media (max-width: 30em) {
    margin-top: 0;
    padding-top: 8px;
  }
}

.usa-footer__contact-info {
  @media (min-width: 30em) {
    justify-content: flex-start !important;
    margin-top: -0.25rem;
  }
}

.footer-social-block {
  display: inline-block;
  height:100%;
}

.usa-footer__contact-heading {
  margin-bottom: 0.5rem;

  @media (max-width: 30em) {
    text-align: left;
  }
}

.usa-footer__contact-heading.es {
  @media (min-width: 30em) {
    display: inline-grid;
    margin-top: 0.5rem;
    margin-right: -1.5rem;
    text-align: left;
  }
}

.usa-footer__social-links {

  @media (min-width: 30em) {
    justify-content: flex-start;
    padding-right: 0;
    padding-bottom: 0;

  }

  div {
    &:first-of-type {
      padding-left: 0;
    }
  }
}

.usa-social-link {
  background-color: transparent;
  padding: 6px;
  width: 44px;
  height: 44px;
  margin-bottom: -6px;

  &:hover {
    background-color: var($cyan-light);
  }

  span {
    position: absolute;
    left: -999em;
    right: auto;
  }

  img {
    display: block;
    height: 32px;
    width: 32px;
  }
}

/* ---- Identifier ----
*/

.usa-identifier {
  background-color: color("blue-80v");
}

.usa-identifier__section {
  padding-bottom: 0;
}

.usa-identifier__usagov-description {
  line-height: 1.5;
  @media (min-width: 36em) {
    display: flex;
    justify-content: center;
  }
}

.usa-identifier__usagov-description,
.usa-identifier__usagov-description span {
  @media (max-width: 30em) {
    text-align: center;
    display: inline-block;
  }
}

@media only screen and (max-width: 500px) {
  .usa-identifier {
    // Prevent Tagline from being covered by the Feedback button
    position: absolute;
    z-index: 2000000005;
  }
}

